<resources>
    <!-- Main String -->
    <string name="app_name">Sales Semarang</string>

    <!-- activity_main.xml -->
    <string name="login">Masuk Sebagai:</string>
    <string name="logo">Logo</string>
    <string name="masuk">Masuk</string>
    <string name="nama">Masukan Nama Anda</string>

    <!-- activity_dasboard.xml -->
    <string name="bt_penjualan">Button Penjualan</string>
    <string name="bt_riwayat">Button Riwayat</string>
    <string name="bt_konsumen">Button Konsumen</string>
    <string name="calendar">Tanggal Hari Ini</string>

    <!-- activity_penjualan.xml -->
    <string name="penjualan">PENJUALAN</string>
    <string name="toko">Nama Toko</string>
    <string name="labelToko">Form Nama Toko</string>
    <string name="titip">Jumlah Titip</string>
    <string name="labelTitip">Form Jumlah Titip</string>
    <string name="retur">Retur</string>
    <string name="labelRetur">Form Jumlah Retur</string>
    <string name="harga">Harga</string>
    <string name="labelHarga">Form Harga</string>
    <string name="terjual">TERJUAL</string>
    <string name="pcs">PCS</string>
    <string name="rp">RUPIAH</string>
    <string name="save">Tombol Simpan</string>

    <!-- activity_riwayat.xml -->
    <string name="riwayat">RIWAYAT</string>
    <string name="tgl">Tanggal</string>
    <string name="review">Hasil Pencarian</string>

</resources>