<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dasboard"
    android:orientation="vertical">

  <LinearLayout
      android:layout_width="150dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/textViewDate"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:orientation="vertical"
      android:gravity="center">
    <ImageButton
        android:id="@+id/bt_penjualan"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:src="@drawable/button_penjualan"
        android:background="@drawable/rounded_button"
        android:elevation="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/bt_penjualan" />
    <ImageButton
        android:id="@+id/bt_riwayat"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:src="@drawable/button_riwayat"
        android:background="@drawable/rounded_button"
        android:elevation="10dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/bt_riwayat" />
    <ImageButton
        android:id="@+id/bt_konsumen"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:src="@drawable/button_konsumen"
        android:background="@drawable/rounded_button"
        android:elevation="10dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/bt_konsumen" />
  </LinearLayout>

  <TextView
      android:id="@+id/textViewDate"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/sub_background"
      android:textAlignment="center"
      android:textStyle="bold"
      android:textSize="20sp"
      android:text="@string/calendar"
      android:textColor="@color/white"
      android:gravity="center"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>

  </androidx.constraintlayout.widget.ConstraintLayout>