<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Riwayat">
    <TextView
        android:id="@+id/sub_riwayat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/riwayat"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:paddingBottom="10dp"
        android:background="@drawable/sub_background"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintTop_toBottomOf="@+id/sub_riwayat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tgl"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/hijau"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/formulir"
            android:focusable="false"
            android:autofillHints="Pilih Tanggal"
            android:inputType="date"
            android:layout_marginTop="5dp"
            tools:ignore="LabelFor" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/review"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="20sp"
                android:padding="15sp"
                android:background="@drawable/sub_background"/>
        </ScrollView>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>